--- a/products.html
+++ b/products.html
@@ -25,7 +25,7 @@
 
             <div class="clicks">
               <div>
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
               </div>
               <div>
                 <a href="products.html">Products</a>
