--- a/index.html
+++ b/index.html
@@ -196,12 +196,16 @@
           </div>
 
           <div class="logos">
-            <a href="#"
+            <a href="https://www.facebook.com/"
               ><img src="./images/Facebook_logo_(square).png.webp"
             /></a>
-            <a href="#"><img src="./images/Google__G__logo.svg.webp" /></a>
-            <a href="#"><img src="./images/insta.webp" /></a>
-            <a href="#"><img src="./images/X.svg" /></a>
+            <a href="https://www.google.com/"
+              ><img src="./images/Google__G__logo.svg.webp"
+            /></a>
+            <a href="https://www.instagram.com/"
+              ><img src="./images/insta.webp"
+            /></a>
+            <a href="https://www.X.com/"><img src="./images/X.svg" /></a>
           </div>
 
           <div class="last">
