--- a/details.html
+++ b/details.html
@@ -27,7 +27,7 @@
 
             <div class="clicks">
               <div>
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
               </div>
               <div>
                 <a href="products.html">Products</a>
