--- a/products.html
+++ b/products.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>products</title>
-    <script src="appearence.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -78,6 +77,7 @@
 
         contain.append(div[i]);
       }
+
       document.body.append(contain);
     </script>
 
@@ -114,5 +114,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="appearence.js"></script>
   </body>
 </html>
